blink_gc_plugin: Disallow GCed class from deriving GCMixin base at leftmost position

If a class derives from both GarbageCollectedMixin base and GarbageCollected base, then GarbageCollected base should be in the leftmost position.

Bug: 775384
Change-Id: I1c94d20aa7eca9f9f1e04d5a604e67269ac7d508
Reviewed-on: https://chromium-review.googlesource.com/727644
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Commit-Queue: Keishi Hattori <keishi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#510810}
Former-commit-id: 7800bedce8a403b209f9343d8b0fd82aca67f6e1